--- a/Week_4/package.json
+++ b/Week_4/package.json
@@ -29,6 +29,7 @@
     "hpp": "^0.2.3",
     "ioredis": "^5.9.3",
     "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "nanoid": "^5.1.6",
     "pino": "^10.3.1",
